# Top-AMS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig
doc/: A1mini换料.gcode  Gcode配置.md  sdkconfig配置.md  其他笔记.md  编译教程.md
hard/N20电机方案/: AMSV6.1.3mf  AMSV7.2.3mf  AMSV7.3.3mf  README.md
hard/TT电机方案/: README.md
main/: CMakeLists.txt  bambu.hpp  channel.hpp  config.hpp  config_example.hpp  convert_html_to_hpp.py  espIO.hpp  espMQTT.hpp  esptools.hpp  idf_component.yml  index.html  localconfig example.hpp  localconfig_example.hpp  main.cpp  smartconfig.hpp  tools.hpp  web_sync.hpp
